# autogen-mem0

./: .coverage  .env.example  .gitignore  AI_NOTES.md  PLAN.md  README.md  aider_client.sh  hello.py  pyproject.toml
config/: config.yaml
config/memory/: vector_store.yaml
docs/: README.md  refactor_plan.md  technical.md
docs/architecture/: README.md  agent_workflow.mmd  message_flow.mmd
docs/architecture/components/: agents.md  configuration.md  memory.md  messages.md  tools.md
docs/multi_agent_design_patterns/: Group_Chat_Design_Pattern.md  group_chat.ipynb  handoffs.ipynb  mixture_of_agents.ipynb  multi-agent-debate.ipynb  reflection.ipynb
docs/tools/: tools.ipynb
examples/: basic_workflow.py  memory_agent_qdrant.py  memory_assistant_example.py  test_memory_performance.py  test_memory_tools.py  test_neo4j.py
scripts/: setup_qdrant.py
src/anthropic-autogen/: __init__.py  cli.py
src/anthropic-autogen/agents/: __init__.py  claude_agent.py  tool_agent.py
src/anthropic-autogen/core/: __init__.py  task.py
src/anthropic-autogen/core/agents/: base.py
src/anthropic-autogen/core/messaging/: __init__.py  messages.py  queue.py
src/anthropic-autogen/core/models/: model_info.py
src/anthropic-autogen/core/orchestration/: orchestrator.py
src/anthropic-autogen/core/tools/: base.py  file_tools.py  schema.py  shell_tool.py
src/anthropic-autogen/tools/: __init__.py  bash.py  shell.py
src/anthropic-autogen/workflow/: __init__.py  executor.py  manager.py  parallel.py  persistence.py  step.py
src/anthropic_autogen/: __init__.py  __main__.py  cli.py  config.py  plan.md
src/anthropic_autogen/agents/: __init__.py  claude_agent.py
src/anthropic_autogen/agents/base/: __init__.py  base.py  tool_agent.py  user_proxy.py
src/anthropic_autogen/agents/specialized/: __init__.py
src/anthropic_autogen/core/: __init__.py  task.py
src/anthropic_autogen/core/agents/: __init__.py  base.py  chat_agent.py  factory.py  task_agent.py  tool.py
src/anthropic_autogen/core/errors/: __init__.py  base.py
src/anthropic_autogen/core/messaging/: __init__.py  base.py  messages.py  types.py
src/anthropic_autogen/core/mixins/: __init__.py  conversation.py  memory.py
src/anthropic_autogen/core/models/: __init__.py  anthropic_client.py
src/anthropic_autogen/core/orchestration/: __init__.py  base.py  orchestrator.py  types.py
src/anthropic_autogen/core/tools/: __init__.py  base.py  definitions.py  registry.py  schema.py
src/anthropic_autogen/examples/: basic_chat.py  multi_agent_workflow.py  tool_example.py  workflow_example.py
src/anthropic_autogen/memory/: __init__.py  base.py
src/anthropic_autogen/memory/stores/: __init__.py  in_memory.py  vector_store.py
src/anthropic_autogen/models/: __init__.py  anthropic.py
src/anthropic_autogen/orchestration/: agent.py  tool.py  tool_orchestrator.py
src/anthropic_autogen/runtime/single_threaded/: distributed.py
src/anthropic_autogen/runtime/worker/: high_throughput.py
src/anthropic_autogen/tools/: __init__.py  file.py
src/anthropic_autogen/tools/api/: __init__.py  base.py
src/anthropic_autogen/tools/code/: __init__.py  dependency_manager.py  formatter.py  git_operations.py  linter.py  test_runner.py
src/anthropic_autogen/tools/data/: __init__.py  analyzer.py  loader.py  reporter.py  visualizer.py
src/anthropic_autogen/tools/filesystem/: __init__.py  manager.py
src/anthropic_autogen/tools/shell/: __init__.py  executor.py
src/anthropic_autogen/tools/web/: __init__.py  browser.py
src/anthropic_autogen/workflow/: __init__.py  executor.py  manager.py  schema.py  state.py
src/autogen_mem0/: __init__.py
src/autogen_mem0/core/: __init__.py
src/autogen_mem0/core/adapters/: __init__.py  messages.py  parameters.py  registry.py  tools.py
src/autogen_mem0/core/agents/: __init__.py  _base.py
src/autogen_mem0/core/config/: __init__.py  base.py  manager.py  providers.py  schema.py
src/autogen_mem0/models/: __init__.py  _anthropic.py  _base_anthropic.py  _huggingface.py  _mem0_anthropic.py  _model_info.py  config.py
tests/: .coverage  __init__.py  logs.txt  test_agent_with_tools.py  test_memory_enabled_client.py  test_simple_chat.py
tests/core/: test_runtime_v2.py
tests/integration/: __init__.py
tests/integration/core/: __init__.py
tests/models/: test_anthropic.py  test_huggingface.py
(+38 files in other folders)
