[project]
name = "anthropic-autogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "autogen-core==0.4.0.dev6",
    "autogen-ext==0.4.0.dev6",
    "click>=8.1.7",
    "pyyaml>=6.0.2",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cli = "anthropic_autogen.cli:cli"
